修改筛选项

--- a/components/filtercomponents/filterBarPop/filterBarPop.wxml
+++ b/components/filtercomponents/filterBarPop/filterBarPop.wxml
@@ -48,7 +48,7 @@
                                   bindtap="clickFilterbar"
                                   data-tabindex="{{_index}}"
                                   data-index="{{index}}"
-                                  data-tag="{{sm.tag}}"
+                                  data-tag="{{sm.filed}}"
                                   data-id="{{sidemenu.id}}">{{sidemenu.name}}
                             </view>
                         </view>
