--- a/components/tab_bar/tab_bar.scss
+++ b/components/tab_bar/tab_bar.scss
@@ -33,7 +33,7 @@
         font-size: 22rpx;
         color: $c-999;
         &.on {
-          color: $color_scheme;
+          color: $color_primary_black;
         }
       }
     }
