--- a/style/components.scss
+++ b/style/components.scss
@@ -381,7 +381,7 @@
     }
   }
   .nodata, .nomore {
-    border-top: 1 rpx solid #e5e5e5;
+    //border-top: 1rpx solid #e5e5e5;
     color: #999
   }
 
