--- a/style/components.scss
+++ b/style/components.scss
@@ -523,3 +523,175 @@
 }
 
 
+
+//activesheet
+.action-sheet-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 11;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  .action-sheet-wrapper {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    max-width: 100%;
+    margin: auto;
+    .action-sheet {
+      width: auto;
+      z-index: 11;
+      overflow: hidden;
+      .action-sheet-group {
+        padding-bottom: 100rpx;
+        background-color: #fff;
+        overflow: hidden;
+        .action-sheet-title {
+          padding:24rpx;
+          color: #8f8f8f;
+          text-align: left;
+          font-size: 30rpx;
+        }
+        .icon-dianhua1{
+          color:#5bc84d;
+          font-size:50rpx;
+        }
+        &.action-sheet-nopadbm{
+          padding-bottom:0;
+        }
+      }
+    }
+
+  }
+}
+//dialog
+.weui-dialog {
+  position: fixed;
+  z-index: 5000;
+  width: 80%;
+  max-width: 600rpx;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  background-color: #ffffff;
+  text-align: center;
+  border-radius: 10rpx;
+  overflow: hidden;
+  .weui-dialog__hd {
+    padding: 24rpx 0;
+    border-bottom: 1rpx solid $borderColorE6;
+    .weui-dialog__title {
+      font-weight: 400;
+      font-size: 36rpx;
+    }
+  }
+
+  .weui-dialog__bd {
+    padding: 24rpx;
+    min-height: 80rpx;
+    font-size: 30rpx;
+    line-height: 1.5;
+    word-wrap: break-word;
+    word-break: break-all;
+    color: #999999;
+  }
+  .weui-dialog__ft {
+    position: relative;
+    line-height: 98rpx;
+    font-size: 36rpx;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
+    &:after {
+      content: " ";
+      position: absolute;
+      left: 0;
+      top: 0;
+      right: 0;
+      height: 1rpx;
+      border-top: 1rpx solid #d5d5d6;
+      color: #d5d5d6;
+      -webkit-transform-origin: 0 0;
+      transform-origin: 0 0;
+      -webkit-transform: scaleY(0.5);
+      transform: scaleY(0.5);
+    }
+    &.weui-dialog__btns_vertical {
+      display: block;
+      height: auto;
+    }
+  }
+  .weui-dialog__btn {
+    display: block;
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+    flex: 1;
+    color: #3cc51f;
+    text-decoration: none;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    position: relative;
+    &:active {
+      background-color: #eeeeee;
+    }
+    &:after {
+      content: " ";
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 1rpx;
+      bottom: 0;
+      border-left: 1rpx solid #d5d5d6;
+      color: #d5d5d6;
+      -webkit-transform-origin: 0 0;
+      transform-origin: 0 0;
+      -webkit-transform: scaleX(0.5);
+      transform: scaleX(0.5);
+    }
+    &:first-child {
+      &:after {
+        display: none;
+      }
+    }
+    &.weui-dialog__btn_bold {
+      font-weight: 500;
+    }
+  }
+  .weui-dialog__btn_default {
+    color: #353535;
+  }
+  .weui-dialog__btn_primary {
+    color: #0bb20c;
+  }
+  .weui-dialog__btns_vertical {
+    .weui-dialog__btn {
+      &:after {
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        right: auto;
+        top: auto;
+        height: 1rpx;
+        width: 100%;
+        background-color: #d5d5d6;
+        display: block;
+        z-index: 15;
+        -webkit-transform-origin: 0 0;
+        transform-origin: 0 0;
+        -webkit-transform: scaleY(.5);
+        transform: scaleY(.5);
+      }
+      &:last-child {
+        &:after {
+          display: none;
+        }
+      }
+    }
+  }
+}
+
+
+
