--- a/components/listcomponents/list/list.wxml
+++ b/components/listcomponents/list/list.wxml
@@ -35,8 +35,8 @@
                             用户{{item.author}}发表
                         </view>
                         <view class="icon-box">
-                            <text class="iconfont {{item.praise_num==1?'icon-dianzan-shi on':'icon-dianzan-kong'}}" data-index="{index}" data-cid="{{item.id}}" catchtap="handleDianZan"></text>
-                            <text class="iconfont {{item.save_num==1?'icon-shoucang-shi on':'icon-shoucang-kong'}}" data-index="{index}" data-pid="{{item.id}}" catchtap="handleCollect"></text>
+                            <text class="iconfont {{item.praise_num==1?'icon-dianzan-shi on':'icon-dianzan-kong'}}" data-index="{{index}}" data-cid="{{item.id}}" catchtap="handleDianZan"></text>
+                            <text class="iconfont {{item.save_num==1?'icon-shoucang-shi on':'icon-shoucang-kong'}}" data-index="{{index}}" data-pid="{{item.id}}" catchtap="handleCollect"></text>
                         </view>
                     </view>
                 </view>
