--- a/pages/post/post.wxml
+++ b/pages/post/post.wxml
@@ -1,3 +1,8 @@
+<dialog id='dialog'
+        title='登录提示'
+        content='小程序需要您的授权才能提供更好的服务哦'
+        confirmText='知道了'>
+</dialog>
 <view class="post ">
     <form action="" bindsubmit="submitForm">
         <view class="m-cell">
