--- a/pages/article/article.wxml
+++ b/pages/article/article.wxml
@@ -1,5 +1,9 @@
 <import src="../../components/detail_content/detail_content.wxml"/>
-
+<dialog id='dialog'
+        title='登录提示'
+        content='小程序需要您的授权才能提供更好的服务哦'
+        confirmText='知道了'>
+</dialog>
 <view class=" article page">
 
         <view class="articleIndex-header">
