--- a/pages/bbs/bbs.wxml
+++ b/pages/bbs/bbs.wxml
@@ -1,4 +1,9 @@
 <import src="../../components/tab_bar/tab_bar.wxml"/>
+<dialog id='dialog'
+        title='登录提示'
+        content='小程序需要您的授权才能提供更好的服务哦'
+        confirmText='知道了'>
+</dialog>
 <view class=" bbs page ">
     <!--列表-->
 
