--- a/pages/customer_manage/customer_manage.wxml
+++ b/pages/customer_manage/customer_manage.wxml
@@ -1,4 +1,9 @@
 <import src="../../components/tab_bar/tab_bar.wxml"/>
+<dialog id='dialog'
+        title='登录提示'
+        content='小程序需要您的授权才能提供更好的服务哦'
+        confirmText='知道了'>
+</dialog>
 <view class="page customer_manage">
     <scroll-view class="overflow-scroll" scroll-y="true" lower-threshold="100" bindscrolltolower="requestList"
                  scroll-with-animation="true">
