--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -2,7 +2,11 @@
 <import src="../../components/detail_content/detail_content.wxml"/>
 <import src="../../components/toast/toast.wxml"/>
 <template is="toast" data="{{ ...$toast }}"/>
-
+<dialog id='dialog'
+        title='登录提示'
+        content='小程序需要您的授权才能提供更好的服务哦'
+        confirmText='知道了'>
+</dialog>
 <view class="detail page">
     <view class="ele-container" wx:if="{{productInfo.images}}">
         <!--banner轮播图组件-->
