--- a/pages/pub-product/pub-product.wxml
+++ b/pages/pub-product/pub-product.wxml
@@ -1,4 +1,9 @@
 <import src="../../components/search_filter/search_filter.wxml"/>
+<dialog id='dialog'
+        title='登录提示'
+        content='小程序需要您的授权才能提供更好的服务哦'
+        confirmText='知道了'>
+</dialog>
 <view class="post index pub-product">
     <!--搜索筛选-->
     <view class="search-top">
