--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -12,18 +12,18 @@
         <view class="user-info">
             <view class="userimg box box-align-center box-pack-center">
                 <view class="logo">
-                    <image src="../../images/users.png"></image>
+                    <image src="{{userInfo.avatarUrl}}"></image>
                 </view>
             </view>
             <view class="usename">
-                call me mama
+                {{userInfo.nickName}}
             </view>
         </view>
     </view>
 
     <view class="card-box">
         <view class="m-cell">
-            <view class="cell-item">
+            <view class="cell-item" bindtap="toList" data-type="mypost">
                 <view class="cell-left ">
                     <view class="cell-icon w60">
                         <image src="../../images/kehu.png"></image>
@@ -32,7 +32,7 @@
                 </view>
                 <view class="cell-right"></view>
             </view>
-            <view class="cell-item">
+            <view class="cell-item" bindtap="toList" data-type="mycollect">
                 <view class="cell-left ">
                     <view class="cell-icon w60">
                         <image src="../../images/collection.png"></image>
@@ -41,7 +41,7 @@
                 </view>
                 <view class="cell-right "></view>
             </view>
-            <view class="cell-item">
+            <view class="cell-item" bindtap="toList" data-type="myorder">
                 <view class="cell-left ">
                     <view class="cell-icon w60">
                         <image src="../../images/order.png"></image>
@@ -50,7 +50,7 @@
                 </view>
                 <view class="cell-right "></view>
             </view>
-            <view class="cell-item">
+            <view class="cell-item" bindtap="contactShop" >
                 <view class="cell-left ">
                     <view class="cell-icon w60">
                         <image src="../../images/service.png"></image>
