--- a/pages/product/select.wxml
+++ b/pages/product/select.wxml
@@ -41,5 +41,9 @@
       <view class="productSelect-text" bindtap="onSelect" data-name="加盟合作" data-py="jm">加盟合作</view>
       <view class="productSelect-icon i10"></view>
     </view>
+    <view class="productSelect-item">
+      <view class="productSelect-text" bindtap="onSelect" data-name="保险合作" data-py="bx">保险服务</view>
+      <view class="productSelect-icon i10"></view>
+    </view>
   </view>
 </view>
