--- a/style/main.css
+++ b/style/main.css
@@ -686,7 +686,7 @@ input {
     color: #56cbcb; }
 
 .post-title {
-  margin: 50rpx 40rpx 0 40rpx;
+  margin: 14rpx 40rpx 0 40rpx;
   border-bottom: 1rpx solid #eee;
   padding-bottom: 14rpx; }
 .post-titleInput {
@@ -1606,7 +1606,7 @@ input {
     .myAuth-btn:after {
       display: none; }
   .myAuth-link {
-    font-size: #576B95; }
+    color: #576B95; }
   .myAuth-title {
     font-size: 42rpx;
     color: #222;
