--- a/style/main.scss
+++ b/style/main.scss
@@ -1382,6 +1382,11 @@ $mc:#DC3B00;
       height:46rpx;
       background:url(#{$domain}i10.png) 0 0/100% 100% no-repeat;
     }
+    &.i11{
+      width:48rpx;
+      height:51rpx;
+      background:url(#{$domain}select-10-48x51.png) 0 0/100% 100% no-repeat;
+    }
   }
 }
 .bbsNav{
