--- a/pages/product/detail.wxml
+++ b/pages/product/detail.wxml
@@ -37,8 +37,8 @@
   <view class="pDetail-bar flex">
     <view class="pDetail-option flex-box0 flex">
       <view class="pDetail-o isfav {{is_save == 1 ? 'ison' : ''}}" bindtap="fav">收藏</view>
-      <view class="pDetail-o istel" bindtap="onCall" data-phone="{{detail.phone}}">电话</view>
+      <button class="pDetail-o istel" open-type="getUser" data-phone="{{detail.phone}}">电话</button>
     </view>
-    <view class="pDetail-btn flex-box1" bindtap="onCall" data-phone="{{detail.phone}}">立即购买</view>
+    <view class="pDetail-btn flex-box1" open-type="getPhoneNumber" bindgetphonenumber="onGetPhoneNumber" data-phone="{{detail.phone}}">立即购买</view>
   </view>
 </view>
